[tool.poetry]
name = "pkgrel_incrementer"
version = "0.1.0"
description = ""
authors = ["Paulo Matias <matias@ufscar.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
aiosqlite = "^0.18.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
